# computer-graphics-from-scratch

./: .gitmodules  CMakeLists.txt  README.md  notes.md
.github/workflows/: cmake-multi-platform.yml  emcmake-multi-platform.yml
cmake/: building_with_emscripten.cmake
examples/: CMakeLists.txt  README.md  figure10-10.cpp  figure10-2.cpp  figure10-3.cpp  figure12-1.cpp  figure12-4.cpp  figure13-1.cpp  figure13-2.cpp  figure13-9.cpp  figure4-8.cpp  figure6-5.cpp  figure7-3.cpp  figure8-1.cpp  figure9-4.cpp  polyhedra.cpp  rotating_icosahedron.cpp
examples/browser/: CMakeLists.txt  browser-example-animation.cpp  browser-example-animation.html  browser-example.cpp  browser-example.html  main.cpp
ext/: CMakeLists.txt
src/: CMakeLists.txt  bmp.cpp  bmp.h  camera.h  canvas.cpp  canvas.h  cgfs_math.h  color.h  demo-rasterizer.cpp  demo.cpp  draw.h  extent.h  index.h  instance.h  interpolation.h  light.h  mesh.h  position.h  projection.h  ray.h  render.h  scene.cpp  scene.h  sphere.h  triangle.h  viewport.h
test/: CMakeLists.txt  canvas_tests.cpp  interpolation_tests.cpp  light_tests.cpp
