add_executable(figure4-8 figure4-8.cpp)
target_link_libraries(figure4-8 cgfs::graphics)

add_executable(figure6-5 figure6-5.cpp)
target_link_libraries(figure6-5 cgfs::graphics)

add_executable(figure7-3 figure7-3.cpp)
target_link_libraries(figure7-3 cgfs::graphics)

add_executable(figure8-1 figure8-1.cpp)
target_link_libraries(figure8-1 cgfs::graphics)

add_executable(figure9-4 figure9-4.cpp)
target_link_libraries(figure9-4 cgfs::graphics)

add_executable(figure10-2 figure10-2.cpp)
target_link_libraries(figure10-2 cgfs::graphics)

add_executable(figure10-3 figure10-3.cpp)
target_link_libraries(figure10-3 cgfs::graphics)

add_executable(figure10-10 figure10-10.cpp)
target_link_libraries(figure10-10 cgfs::graphics)

add_executable(figure12-1 figure12-1.cpp)
target_link_libraries(figure12-1 cgfs::graphics)

add_executable(figure12-4 figure12-4.cpp)
target_link_libraries(figure12-4 cgfs::graphics)

add_executable(figure13-1 figure13-1.cpp)
target_link_libraries(figure13-1 cgfs::graphics)

add_executable(figure13-2 figure13-2.cpp)
target_link_libraries(figure13-2 cgfs::graphics)

add_executable(polyhedra polyhedra.cpp)
target_link_libraries(polyhedra cgfs::graphics)

add_executable(rotating_icosahedron rotating_icosahedron.cpp)
target_link_libraries(rotating_icosahedron cgfs::graphics)
